donate banner overlap bug fix.

--- a/wp-content/themes/it-gets-better/_assets/scss/componets/_donate_banner.scss
+++ b/wp-content/themes/it-gets-better/_assets/scss/componets/_donate_banner.scss
@@ -14,6 +14,7 @@
 		top: -180px;
 		opacity: 0;
 		height: 0;
+		overflow: hidden;
 	}
 
 	@include themify($themes) {
